--- a/OneMainWeb/OneMainWeb.wpp.targets
+++ b/OneMainWeb/OneMainWeb.wpp.targets
@@ -9,5 +9,6 @@
       CustomCollectFiles;
       ;
     </CopyAllFilesToSingleFolderForMsdeployDependsOn>
+    <AutoParameterizationWebConfigConnectionStrings>false</AutoParameterizationWebConfigConnectionStrings>
   </PropertyGroup>
 </Project>
