ckfinder reference updated.

--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -52,8 +52,9 @@
     <Reference Include="AdaptedCSSFriendly">
       <HintPath>..\packages\AdaptedCSSFriendly.1.0.1\lib\net40\AdaptedCSSFriendly.dll</HintPath>
     </Reference>
-    <Reference Include="CKFinder">
-      <HintPath>..\packages\CKFinder.library.1.0.0.0\lib\net45\CKFinder.dll</HintPath>
+    <Reference Include="CKFinder, Version=2.0.0.945, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\CKFinder.library.1.1.0.0\lib\net45\CKFinder.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -806,6 +807,7 @@
     <None Include="One.Net.nuspec">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Properties\PublishProfiles\file.pubxml" />
     <None Include="Properties\PublishProfiles\intranet.renderspace.si.pubxml" />
     <None Include="Properties\PublishProfiles\prirocnik.renderspace.net.pubxml" />
     <Content Include="SiteDefault\aspx_templates\demo.aspx" />
@@ -814,6 +816,12 @@
     <Content Include="SiteDefault\_css\default.html" />
     <Content Include="SiteDefault\_js\default.html" />
     <Content Include="SiteDefault\_js\Forms.js" />
+    <Content Include="site_specific\aspx_templates\demo.aspx" />
+    <Content Include="site_specific\ck.css" />
+    <Content Include="site_specific\ckstyles.js" />
+    <Content Include="site_specific\_css\default.html" />
+    <Content Include="site_specific\_js\default.html" />
+    <Content Include="site_specific\_js\Forms.js" />
     <Content Include="Utils\MenuGroups.asmx" />
     <Content Include="Utils\OneClear.aspx" />
     <Content Include="Utils\TestException.aspx" />
@@ -832,6 +840,7 @@
     <Content Include="Utils\Favicon.ashx" />
     <Content Include="Utils\BambooCsvExport.ashx" />
     <Content Include="SiteDefault\ProjectName.wpp.targets" />
+    <Content Include="site_specific\aspx_templates\demo.Master" />
     <None Include="Web.intranet.renderspace.si.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
@@ -919,7 +928,6 @@
     <Folder Include="AdminExtensions\" />
     <Folder Include="adm\ashx\" />
     <Folder Include="App_GlobalResources\" />
-    <Folder Include="site_specific\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BLL\BLL.csproj">
