--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -63,9 +63,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="forms, Version=3.1.0.8, Culture=en-US, processorArchitecture=MSIL">
+    <Reference Include="forms, Version=3.1.0.9, Culture=en-US, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Forms.3.1.0.8\lib\net45\forms.dll</HintPath>
+      <HintPath>..\packages\Forms.3.1.0.9\lib\net45\forms.dll</HintPath>
     </Reference>
     <Reference Include="Kentor.OwinCookieSaver, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -814,6 +814,8 @@
     <Content Include="SiteDefault\_css\default.html" />
     <Content Include="SiteDefault\_js\default.html" />
     <Content Include="SiteDefault\_js\Forms.js" />
+    <Content Include="SiteDefault\_js\jquery.validate.js" />
+    <Content Include="SiteDefault\_js\jquery.validate.messages_sl.js" />
     <Content Include="Utils\MenuGroups.asmx" />
     <Content Include="Utils\OneClear.aspx" />
     <Content Include="Utils\TestException.aspx" />
