added check for subpage routing

--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -28,7 +28,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="WebSiteId" value="4" />
+    <add key="WebSiteId" value="1" />
     <add key="PublishRoleMapping" value="publisher" />
     <add key="PublishFlag" value="false" />
     <add key="EnableDiskCache" value="false" />
@@ -40,7 +40,7 @@
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="server=KIT.renderspace.si;uid=universal;pwd=Identity12345;database=universal_identity_2;Pooling=true;" providerName="System.Data.SqlClient" />
-    <add name="MsSqlConnectionString" connectionString="server=mongol.cloudapp.net;uid=fa;pwd=arhitekturo;database=fa;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="MsSqlConnectionString" connectionString="server=tartar.renderspace.net;uid=fa;pwd=arhitekturo;database=fa;Pooling=true;" providerName="System.Data.SqlClient" />
     <add name="MsSqlConnectionStringCustom" connectionString="server=KIT.renderspace.si;uid=termedobrna;pwd=m123456;database=termedobrna_custom;Pooling=true;" />
     <add name="Bamboo" connectionString="server=KIT.renderspace.si;uid=termedobrna;pwd=m123456;database=termedobrna_custom;Pooling=true;" />
   </connectionStrings>
