added <security mode="Transport"></security> to service binding definition to enable services to be called across https upped to 3.3.21

--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -177,19 +177,21 @@
   <system.serviceModel>
     <bindings>
       <webHttpBinding>
-        <binding maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
+        <binding name="webBinding" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
+          <security mode="Transport"></security>
+        </binding>
       </webHttpBinding>
     </bindings>
     <serviceHostingEnvironment multipleSiteBindingsEnabled="true" aspNetCompatibilityEnabled="true" />
     <services>
       <service name="One.Net.BLL.Service.ScaffoldService">
-        <endpoint address="" binding="webHttpBinding" contract="One.Net.BLL.Service.IScaffoldService" />
+        <endpoint address="" binding="webHttpBinding" bindingConfiguration="webBinding" contract="One.Net.BLL.Service.IScaffoldService" />
       </service>
       <service name="One.Net.BLL.Service.FormService">
-        <endpoint address="" binding="webHttpBinding" contract="One.Net.BLL.Service.IFormService" />
+        <endpoint address="" binding="webHttpBinding" bindingConfiguration="webBinding" contract="One.Net.BLL.Service.IFormService" />
       </service>
       <service name="One.Net.BLL.Service.AdminService">
-        <endpoint address="" binding="webHttpBinding" contract="One.Net.BLL.Service.IAdminService" />
+        <endpoint address="" binding="webHttpBinding" bindingConfiguration="webBinding" contract="One.Net.BLL.Service.IAdminService" />
       </service>
     </services>
     <behaviors>
