--- a/OneMainWeb/LocalRewrite.config
+++ b/OneMainWeb/LocalRewrite.config
@@ -1,4 +1,8 @@
 <rules>
+  <rule name="imagesRedir" stopProcessing="true">
+    <match url="^(images/|css/|fonts/|js/)(.*)" />
+    <action type="Rewrite" url="site_specific/{R:1}{R:2}" />
+  </rule>
   <rule name="underscoreRedir" stopProcessing="true">
     <match url="^(?!_files)(_.*)+" />
     <action type="Rewrite" url="site_specific/{R:1}" />
