upped version to 3.3.22 to include gulpRedir rule

--- a/OneMainWeb/LocalRewrite.config
+++ b/OneMainWeb/LocalRewrite.config
@@ -1,5 +1,5 @@
 <rules>
-  <rule name="imagesRedir" stopProcessing="true">
+  <rule name="gulpRedir" stopProcessing="true">
     <match url="^(images/|css/|fonts/|js/)(.*)" />
     <action type="Rewrite" url="site_specific/{R:1}{R:2}" />
   </rule>
