upped to 3.3.30 fixed web.config missing  providerName="System.Data.SqlClient" in two connection strings. fixed web.config http vs https endpoint configuration.

--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -41,8 +41,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="server=KIT.renderspace.si;uid=universal;pwd=Identity12345;database=universal_identity_2;Pooling=true;" providerName="System.Data.SqlClient" />
     <add name="MsSqlConnectionString" connectionString="server=tartar.renderspace.net;uid=fa;pwd=arhitekturo;database=fa;Pooling=true;" providerName="System.Data.SqlClient" />
-    <add name="MsSqlConnectionStringCustom" connectionString="server=KIT.renderspace.si;uid=termedobrna;pwd=m123456;database=termedobrna_custom;Pooling=true;" />
-    <add name="Bamboo" connectionString="server=KIT.renderspace.si;uid=termedobrna;pwd=m123456;database=termedobrna_custom;Pooling=true;" />
+    <add name="MsSqlConnectionStringCustom" connectionString="server=KIT.renderspace.si;uid=termedobrna;pwd=m123456;database=termedobrna_custom;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="Bamboo" connectionString="server=KIT.renderspace.si;uid=termedobrna;pwd=m123456;database=termedobrna_custom;Pooling=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -177,7 +177,10 @@
   <system.serviceModel>
     <bindings>
       <webHttpBinding>
-        <binding name="webBinding" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
+        <binding name="http" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
+          <security mode="None"></security>
+        </binding>
+        <binding name="https" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
           <security mode="Transport"></security>
         </binding>
       </webHttpBinding>
@@ -185,13 +188,13 @@
     <serviceHostingEnvironment multipleSiteBindingsEnabled="true" aspNetCompatibilityEnabled="true" />
     <services>
       <service name="One.Net.BLL.Service.ScaffoldService">
-        <endpoint address="" binding="webHttpBinding" bindingConfiguration="webBinding" contract="One.Net.BLL.Service.IScaffoldService" />
+        <endpoint address="" binding="webHttpBinding" bindingConfiguration="http" contract="One.Net.BLL.Service.IScaffoldService" />
       </service>
       <service name="One.Net.BLL.Service.FormService">
-        <endpoint address="" binding="webHttpBinding" bindingConfiguration="webBinding" contract="One.Net.BLL.Service.IFormService" />
+        <endpoint address="" binding="webHttpBinding" bindingConfiguration="http" contract="One.Net.BLL.Service.IFormService" />
       </service>
       <service name="One.Net.BLL.Service.AdminService">
-        <endpoint address="" binding="webHttpBinding" bindingConfiguration="webBinding" contract="One.Net.BLL.Service.IAdminService" />
+        <endpoint address="" binding="webHttpBinding" bindingConfiguration="http" contract="One.Net.BLL.Service.IAdminService" />
       </service>
     </services>
     <behaviors>
