added XML file type

--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -130,6 +130,7 @@
       <add path="*.txt" name="txt" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.log" name="log" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.epub" name="epub2" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
+      <add path="*.xml" name="xml" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
     </handlers>
     <staticContent>
       <clientCache cacheControlMaxAge="7.00:00:00" cacheControlMode="UseMaxAge" />
