--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -40,9 +40,9 @@
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="server=KIT.renderspace.si;uid=universal;pwd=Identity12345;database=universal_identity_2;Pooling=true;" providerName="System.Data.SqlClient" />
-    <add name="MsSqlConnectionString" connectionString="server=tartar.renderspace.net;uid=fa;pwd=arhitekturo;database=fa;Pooling=true;" providerName="System.Data.SqlClient" />
-    <add name="MsSqlConnectionStringCustom" connectionString="server=KIT.renderspace.si;uid=termedobrna;pwd=m123456;database=termedobrna_custom;Pooling=true;" providerName="System.Data.SqlClient" />
-    <add name="Bamboo" connectionString="server=KIT.renderspace.si;uid=termedobrna;pwd=m123456;database=termedobrna_custom;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="MsSqlConnectionString" connectionString="server=kit.renderspace.si;uid=podravka;pwd=podravka;database=podravka;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="Bamboo" connectionString="server=kit.renderspace.si;uid=podravka;pwd=podravka;database=podravka_custom;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="MsSqlConnectionStringCustom" connectionString="server=kit.renderspace.si;uid=podravka;pwd=podravka;database=podravka_custom;Pooling=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
