added https binding for default

--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -163,9 +163,9 @@
     </staticContent>
     <httpErrors errorMode="DetailedLocalOnly" defaultResponseMode="ExecuteURL">
       <remove statusCode="404" subStatusCode="-1" />
-      <error statusCode="404" prefixLanguageFilePath="" path="/site_specific/404.html" responseMode="Redirect" />
+      <error statusCode="404" prefixLanguageFilePath="" path="site_specific\404.html" responseMode="File" />
       <remove statusCode="403" subStatusCode="-1" />
-      <error statusCode="403" prefixLanguageFilePath="" path="/site_specific/403.html" responseMode="Redirect" />
+      <error statusCode="403" prefixLanguageFilePath="" path="site_specific\403.html" responseMode="File"/>
     </httpErrors>
   </system.webServer>
   <system.net>
@@ -190,12 +190,15 @@
     <services>
       <service name="One.Net.BLL.Service.ScaffoldService">
         <endpoint address="" binding="webHttpBinding" bindingConfiguration="http" contract="One.Net.BLL.Service.IScaffoldService" />
+        <endpoint address="" binding="webHttpBinding" bindingConfiguration="https" contract="One.Net.BLL.Service.IScaffoldService" />
       </service>
       <service name="One.Net.BLL.Service.FormService">
         <endpoint address="" binding="webHttpBinding" bindingConfiguration="http" contract="One.Net.BLL.Service.IFormService" />
+      <endpoint address="" binding="webHttpBinding" bindingConfiguration="https" contract="One.Net.BLL.Service.IFormService" />
       </service>
       <service name="One.Net.BLL.Service.AdminService">
         <endpoint address="" binding="webHttpBinding" bindingConfiguration="http" contract="One.Net.BLL.Service.IAdminService" />
+      <endpoint address="" binding="webHttpBinding" bindingConfiguration="https" contract="One.Net.BLL.Service.IAdminService" />
       </service>
     </services>
     <behaviors>
