latest forms - not finished

--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -165,7 +165,7 @@
       <remove statusCode="404" subStatusCode="-1" />
       <error statusCode="404" prefixLanguageFilePath="" path="site_specific\404.html" responseMode="File" />
       <remove statusCode="403" subStatusCode="-1" />
-      <error statusCode="403" prefixLanguageFilePath="" path="site_specific\403.html" responseMode="File"/>
+      <error statusCode="403" prefixLanguageFilePath="" path="site_specific\403.html" responseMode="File" />
     </httpErrors>
   </system.webServer>
   <system.net>
@@ -181,24 +181,24 @@
         <binding name="http" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
           <security mode="None"></security>
         </binding>
-        <binding name="https" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
+        <!--<binding name="https" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
           <security mode="Transport"></security>
-        </binding>
+        </binding>-->
       </webHttpBinding>
     </bindings>
     <serviceHostingEnvironment multipleSiteBindingsEnabled="true" aspNetCompatibilityEnabled="true" />
     <services>
       <service name="One.Net.BLL.Service.ScaffoldService">
         <endpoint address="" binding="webHttpBinding" bindingConfiguration="http" contract="One.Net.BLL.Service.IScaffoldService" />
-        <endpoint address="" binding="webHttpBinding" bindingConfiguration="https" contract="One.Net.BLL.Service.IScaffoldService" />
+        <!--<endpoint address="" binding="webHttpBinding" bindingConfiguration="https" contract="One.Net.BLL.Service.IScaffoldService" />-->
       </service>
-      <service name="One.Net.BLL.Service.FormService">
-        <endpoint address="" binding="webHttpBinding" bindingConfiguration="http" contract="One.Net.BLL.Service.IFormService" />
-      <endpoint address="" binding="webHttpBinding" bindingConfiguration="https" contract="One.Net.BLL.Service.IFormService" />
+      <service name="Forms.BLL.FormService">
+        <endpoint address="" binding="webHttpBinding" bindingConfiguration="http" contract="Forms.BLL.IFormService" />
+        <!--<endpoint address="" binding="webHttpBinding" bindingConfiguration="https" contract="Forms.BLL.IFormService" />-->
       </service>
       <service name="One.Net.BLL.Service.AdminService">
         <endpoint address="" binding="webHttpBinding" bindingConfiguration="http" contract="One.Net.BLL.Service.IAdminService" />
-      <endpoint address="" binding="webHttpBinding" bindingConfiguration="https" contract="One.Net.BLL.Service.IAdminService" />
+        <!--<endpoint address="" binding="webHttpBinding" bindingConfiguration="https" contract="One.Net.BLL.Service.IAdminService" />-->
       </service>
     </services>
     <behaviors>
@@ -272,7 +272,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.AspNet.Identity.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
