--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -65,10 +65,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="forms, Version=3.2.0.4, Culture=en-US, processorArchitecture=MSIL">
-      <HintPath>..\packages\Forms.3.2.0.4\lib\net45\forms.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Kentor.OwinCookieSaver, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Kentor.OwinCookieSaver.1.1.0\lib\net45\Kentor.OwinCookieSaver.dll</HintPath>
       <Private>True</Private>
@@ -263,6 +259,16 @@
       <DependentUpon>TextContentModal.ascx</DependentUpon>
     </Compile>
     <Compile Include="adm\AuthorizationHelper.cs" />
+    <Compile Include="adm\ExcelExport.ashx.cs">
+      <DependentUpon>ExcelExport.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="adm\Forms.aspx.cs">
+      <DependentUpon>Forms.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="adm\Forms.aspx.designer.cs">
+      <DependentUpon>Forms.aspx</DependentUpon>
+    </Compile>
     <Compile Include="adm\Icons.ashx.cs">
       <DependentUpon>Icons.ashx</DependentUpon>
     </Compile>
@@ -503,8 +509,6 @@
     </Content>
     <Content Include="CommonModules\ArticleList.ascx" />
     <Content Include="CommonModules\ArticleSingle.ascx" />
-    <Content Include="CommonModules\Form.ascx" />
-    <Content Include="CommonModules\FormSelector.ascx" />
     <Content Include="CommonModules\MagnificGallery.ascx" />
     <Content Include="CommonModules\Menu.ascx" />
     <Content Include="CommonModules\NavigatePages.ascx" />
@@ -817,9 +821,6 @@
     <Content Include="SiteDefault\ckstyles.js" />
     <Content Include="SiteDefault\_css\default.html" />
     <Content Include="SiteDefault\_js\default.html" />
-    <Content Include="SiteDefault\_js\Forms.js" />
-    <Content Include="SiteDefault\_js\jquery.validate.js" />
-    <Content Include="SiteDefault\_js\jquery.validate.messages_sl.js" />
     <Content Include="Utils\MenuGroups.asmx" />
     <Content Include="Utils\OneClear.aspx" />
     <Content Include="Utils\TestException.aspx" />
