--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -40,7 +40,7 @@
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="server=KIT.renderspace.si;uid=universal;pwd=Identity12345;database=universal_identity_2;Pooling=true;" providerName="System.Data.SqlClient" />
-    <add name="MsSqlConnectionString" connectionString="server=kit.renderspace.si;uid=podravka;pwd=podravka;database=podravka;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="MsSqlConnectionString" connectionString="server=KIT.renderspace.si;uid=onenetdemo;pwd=onenetdemo;database=OneNetDemo;Pooling=true;" providerName="System.Data.SqlClient" />
     <add name="Bamboo" connectionString="server=KIT.renderspace.si;uid=onenetdemo;pwd=onenetdemo;database=one_net_custom;Pooling=true;" />
     <add name="MsSqlConnectionStringCustom" connectionString="server=KIT.renderspace.si;uid=onenetdemo;pwd=onenetdemo;database=one_net_custom;Pooling=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
