origin for json

--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -40,9 +40,9 @@
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="server=KIT.renderspace.si;uid=universal;pwd=Identity12345;database=universal_identity_2;Pooling=true;" providerName="System.Data.SqlClient" />
-    <add name="MsSqlConnectionString" connectionString="server=KIT.renderspace.si;uid=onenetdemo;pwd=onenetdemo;database=OneNetDemo;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="MsSqlConnectionString" connectionString="server=KIT.renderspace.si;uid=onenetdemo;pwd=onenetdemo;database=OneNetDemo;Pooling=true;" />
+    <add name="MsSqlConnectionStringCustom" connectionString="server=KIT.renderspace.si;uid=onenetdemo;pwd=onenetdemo;database=one_net_custom;Pooling=true;" />
     <add name="Bamboo" connectionString="server=KIT.renderspace.si;uid=onenetdemo;pwd=onenetdemo;database=one_net_custom;Pooling=true;" />
-    <add name="MsSqlConnectionStringCustom" connectionString="server=KIT.renderspace.si;uid=onenetdemo;pwd=onenetdemo;database=one_net_custom;Pooling=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
