enabled cors for AdminService/GetFolders

--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -233,6 +233,13 @@
       </authorization>
     </system.web>
   </location>
+  <location path="AdminService/GetFolders">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
   <location path="ScaffoldService">
     <system.web>
       <authorization>
