progress with datoteke

--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -240,6 +240,13 @@
       </authorization>
     </system.web>
   </location>
+  <location path="AdminService/GetFolderFiles">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>  
   <location path="ScaffoldService">
     <system.web>
       <authorization>
