added website to all security group

--- a/OneMainWeb/adm/web.config
+++ b/OneMainWeb/adm/web.config
@@ -112,7 +112,7 @@
   <location path="Website.aspx">
     <system.web>
       <authorization>
-        <allow roles="admin, Website" />
+        <allow roles="admin, Website, all" />
         <deny users="*" />
       </authorization>
     </system.web>
