regulars added to all security

--- a/OneMainWeb/adm/web.config
+++ b/OneMainWeb/adm/web.config
@@ -139,7 +139,7 @@
   <location path="Regulars.aspx">
     <system.web>
       <authorization>
-        <allow roles="admin, Regulars" />
+        <allow roles="admin, Regulars, all" />
         <deny users="*" />
       </authorization>
     </system.web>
