added non-www redirect to LocalRewrite.config

--- a/OneMainWeb/LocalRewrite.config
+++ b/OneMainWeb/LocalRewrite.config
@@ -1,4 +1,11 @@
 <rules>
+  <rule name="Redirect non-www to www" patternSyntax="ECMAScript" stopProcessing="true">
+    <match url=".*" />
+    <conditions>
+      <add input="{HTTP_HOST}" pattern="^website.com$" />
+    </conditions>
+    <action type="Redirect" url="http://www.website.com/{R:0}" redirectType="Permanent" />
+  </rule>
   <rule name="gulpRedir" stopProcessing="true">
     <match url="^(images/|css/|fonts/|js/)(.*)" />
     <action type="Rewrite" url="site_specific/{R:1}{R:2}" />
