--- a/OneMainWeb/One.Net.nuspec
+++ b/OneMainWeb/One.Net.nuspec
@@ -3,12 +3,14 @@
     <metadata>
         <id>One.NET</id>
         <version>3.7.14</version>
+        <releaseNotes>Module instance up-down fix</releaseNotes>
         <title>One.NET</title>
-        <authors>samof</authors>
+        <authors>samo4</authors>
         <owners>Renderspace d.o.o.</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>A simple enterprise content management system</description>
         <copyright>Copyright © Renderspace d.o.o. 2016</copyright>
+        <tags>web asp.net webforms CMS</tags>
         <dependencies>
           
           <dependency id="Kentor.OwinCookieSaver" version="1.0.2" />
@@ -77,8 +79,8 @@
       
       <file src="bin\One.Net.BLL.dll" target="lib\net45" />
       <file src="bin\OneMainWeb.dll" target="lib\net45" />
-      <file src="gitignore.template" target="content\SiteDefault" />
-      <file src="Web.config" target="content\SiteDefault" />
+      <file src="SiteDefault\gitignore.template" target="content\SiteDefault" />
+      <file src="SiteDefault\Web.config" target="content\SiteDefault" />
       <file src="LocalRewrite.config" target="content\SiteDefault" />
       <file src="Web.sitemap" target="content\SiteDefault" />
     </files>
