fixed nuget publish problem

--- a/OneMainWeb/One.Net.nuspec
+++ b/OneMainWeb/One.Net.nuspec
@@ -3,7 +3,7 @@
     <metadata>
         <id>One.NET</id>
         <version>3.9.9</version>
-        <releaseNotes>Fixed RSS</releaseNotes>
+        <releaseNotes>Azure searc module added</releaseNotes>
         <title>One.NET</title>
         <authors>samo4</authors>
         <owners>Renderspace d.o.o.</owners>
@@ -28,7 +28,7 @@
         
           <dependency id="AdaptedCSSFriendly" version="1.1.1"  />
           <dependency id="MsSqlDBUtility" version="1.1.2"  />
-          <dependency id="CKFinder.library"  />
+          <dependency id="CKFinder.library" version="1.4.0.1"  />
           <dependency id="NLog" version="4.4.1" />
 
         </dependencies>
