--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -54,8 +54,9 @@
       <HintPath>..\packages\AdaptedCSSFriendly.1.1.1\lib\net45\AdaptedCSSFriendly.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="CKFinder, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CKFinder.library.1.4.0.0\lib\net45\CKFinder.dll</HintPath>
+    <Reference Include="CKFinder, Version=2.0.0.945, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CKFinder.library.1.4.0.1\lib\net45\CKFinder.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
