--- a/OneMainWeb/SiteDefault/Web.config
+++ b/OneMainWeb/SiteDefault/Web.config
@@ -128,6 +128,7 @@
       <add path="*.woff2" name="woff2" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.epub" name="epub" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.mp3" name="mp3" verb="GET,HEAD,POST" type="One.Net.BLL.Paths.DownloadHandler" />
+      <add path="*.mp4" name="mp4" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />      
       <add path="*.txt" name="txt" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.log" name="log" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.epub" name="epub2" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
